# DatabaseLab

./: .gitignore  CMakeLists.txt  configurations.h  dbfunctions.c  dbfunctions.h  indextables.c  indextables.h  init.c  init.h  main.c  tables.c  tables.h  test  trashstack.c  trashstack.h
